# Qwen3-VL-JAX

./: .gitignore  README.md  STREAMING.md  model.py  pyproject.toml  run.py  run_mlx.py  run_streaming.py  sample.py  utils.py
examples/imgs/: README.md
triton_kernels/: BLOG_NOTES.md  INSTRUCTIONS.md  PLAN.md  bench_chart.py  bench_fused.py  bench_real_vs_hf.py  bench_vs_flash.py  bench_vs_hf.py  benchmark_results.csv  commit_msg_pr.md  fused_ops.py  modal_app.py  plot_chart.py  profile_attention.py  profile_rope_cache.py  profile_shuffle.py  profile_vision.py  spatial_merge.py  test_real_images.py  test_video.py  test_vision_e2e.py  test_window.py  vision_attention.py
triton_kernels/reference/: triton_flash_attn.py
