[project]
name = "qwen3-vl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chz>=0.1.0",
    "flax>=0.8.0",
    "huggingface-hub>=0.19.0",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "safetensors>=0.4.0",
    "transformers>=4.30.0",
]
