[project]
name = "qwen3-vl"
version = "0.1.0"
description = "Minimal Qwen3-VL inference in JAX/Flax"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chz>=0.1.0",
    "flax>=0.8.0",
    "huggingface-hub>=0.19.0",
    "jax>=0.8.0",
    "jaxlib>=0.8.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "safetensors>=0.4.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
# NVIDIA CUDA 12 support - install with: uv sync --extra cuda12
cuda12 = ["jax[cuda12_local]>=0.8.0"]

# CPU-only fallback
cpu = []
